# ShadowCasting2D

./: .gitignore  CMakeLists.txt
drivers/: main.cpp
inc/: custom_functions.h  olcPixelGameEngine.h  visibility_polygon.h
scripts/: utilities.cmake
src/: custom_functions.cpp  visibility_polygon.cpp
